# osrs_clipper

./: .gitignore  Cargo.toml  README.md
src/: api.rs  aws.rs  clip_detector.rs  main.rs  s3_querier.rs  s3_uploader.rs  transcribe.rs  utilities.rs
