[package]
name = "osrs_clipper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0"
async-stream = "0.3.6"
aws-config = "1.5.16"
aws-sdk-s3 = "1.74.0"
aws-sdk-transcribestreaming = "1.60.0"
aws-smithy-http = "0.60.12"
aws-types = "1.3.5"
bytes = "1.10.0"
chrono = "0.4.39"
env_logger = "0.11.6"
hound = "3.5.1"
log = "0.4"
opencv = "0.94.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tracing-subscriber = "0.3.19"
